# Demo-Repo

./: CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  hellofunc.c  hellomake.c  hellomake.h
include/: hellomake.h
src/: Makefile.old  hellofunc.c  hellomake.c
